apps/base/priceghost/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: priceghost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: priceghost-backend
  name: priceghost-backend
  namespace: priceghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priceghost-backend
  template:
    metadata:
      labels:
        app: priceghost-backend
    spec:
      containers:
        - image: ghcr.io/clucraft/priceghost-backend:33b9445
          name: priceghost-backend
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: priceghost-frontend
  name: priceghost-frontend
  namespace: priceghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priceghost-frontend
  template:
    metadata:
      labels:
        app: priceghost-frontend
    spec:
      containers:
        - image: ghcr.io/clucraft/priceghost-frontend:2549118
          name: priceghost-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
